kurz (0.2-4) UNRELEASED; urgency=medium

  * Fixed indentation

 -- Azer Abdullaev (Like All) <like-all@yandex.com>  Wed, 03 Jan 2018 08:44:21 -0800

kurz (0.2-3) unstable; urgency=medium

  * Updated logging function

 -- Azer Abdullaev (Like All) <like-all@yandex.com>  Wed, 03 Jan 2018 08:44:16 -0800

kurz (0.2-2) unstable; urgency=medium

  * Replaced JoinMUC function with JoinMUCNoHistory

 -- Azer Abdullaev (Like All) <like-all@yandex.com>  Wed, 03 Jan 2018 08:26:40 -0800

kurz (0.2-1) unstable; urgency=medium

  * First build for Debian Stretch

 -- Azer Abdullaev (Like All) <like-all@yandex.com>  Wed, 03 Jan 2018 01:49:45 -0800

kurz (0.1-3) unstable; urgency=medium

  * Update XMPP library

 -- Azer Abdullaev (Like All) <like-all@yandex.com>  Wed, 03 Jan 2018 01:32:42 -0800

kurz (0.1-2) unstable; urgency=medium

  * Build using Travis CI
  * Replace md2man with Ruby-ronn
  * Add git to build dependencies

 -- Azer Abdullaev (Like All) <like-all@yandex.com>  Sat, 16 Jul 2016 18:07:00 +0300

kurz (0.1-1) unstable; urgency=low

  * Initial release

 -- Azer Abdullaev (Like All) <like-all@yandex.com>  Fri, 17 Apr 2015 18:01:13 +0300